--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI= "mongodb+srv://palaswadikarshravani_db_user:shravanigdg@cluster0.atjynmk.mongodb.net/?appName=Cluster0"
+MONGO_URI= "mongodb+srv://palaswadikarshravani_db_user:RIe4fcGtm7tBuYqW@cluster0.atjynmk.mongodb.net/?appName=Cluster0"
 PORT=5000
