ready for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI= "mongodb+srv://palaswadikarshravani_db_user:RIe4fcGtm7tBuYqW@cluster0.atjynmk.mongodb.net/?appName=Cluster0"
+MONGO_URI="mongodb+srv://palaswadikarshravani_db_user:Shravani123@cluster0.atjynmk.mongodb.net/?appName=Cluster0"
 PORT=5000
+    
